js262/test/language/module-code/parse-err-decl-pos-import-class-decl-method-gen.js


/*---
description: Statement cannot contain an `import` declaration
esid: sec-modules
negative:
  phase: parse
  type: SyntaxError
flags: [module]
features: [generators]
---*/

$DONOTEVALUATE();

class C { *method() { import v from './decl-pos-import-class-decl-method-gen.js'; } }
